# prism

./: Cargo.toml  README.md
src/: config.rs  layout.rs  main.rs
src/prism/: console.rs  device.rs  input.rs  mod.rs  mux.rs  seat.rs  server.rs  shm.rs  sync.rs  utf8.rs  vt.rs
src/renderer/: fb.rs  font.rs  mod.rs
