[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
num_enum = { version = "0.7", default-features = false }
psf2-font = "0.1.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
utf8 = []
